--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,6 @@ body header .main-navBar nav ul {
 }
 
 body header .main-navBar nav ul .home {
-  height: 50px;
   position: relative;
 }
 
@@ -879,8 +878,8 @@ footer .contactBody .contact .contactNumb {
   border-radius: 15px;
   width: 90%;
   margin-left: 6%;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 1px 4px 12px 5px;
-          box-shadow: rgba(0, 0, 0, 0.1) 1px 4px 12px 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.56) 20px 30px 120px 4px;
+          box-shadow: rgba(0, 0, 0, 0.56) 20px 30px 120px 4px;
   padding: 3% 14%;
 }
 
@@ -927,6 +926,172 @@ footer .contactBody .contact .contactNumb {
 
 .sendUs .form form .accaunt .right {
   margin-left: 4%;
+}
+
+.blog .section {
+  margin-top: 5%;
+  margin-left: 5%;
+}
+
+.blog .section .article img {
+  margin-bottom: 25px;
+}
+
+.blog .section .article h1 {
+  margin-top: 20px;
+  width: 100%;
+  font-size: 38px;
+}
+
+.blog .section .article button {
+  margin-top: 20px;
+  padding: 5px 25px;
+  background: #233A95FF;
+}
+
+.blog .section img {
+  border-radius: 10px;
+}
+
+.blog .section .numbs {
+  text-align: center;
+  cursor: pointer;
+  margin: 10% 0 15%;
+}
+
+.blog .section .numbs .active {
+  background: #2BBEF9FF;
+  color: white;
+}
+
+.blog .section .numbs .numb {
+  margin: 0 7px;
+  padding: 5px 12px;
+  border-radius: 50%;
+}
+
+.blog .section .numbs .numb:hover {
+  background: #e6e6e6;
+}
+
+.blog .section .numbs i {
+  cursor: pointer;
+  padding: 10px 12px;
+  border-radius: 50%;
+}
+
+.blog .section .numbs i:hover {
+  background: #e6e6e6;
+}
+
+.blog .sideBar {
+  margin: 5% 0;
+}
+
+.blog .sideBar img {
+  width: 90%;
+}
+
+.blog .sideBar input {
+  outline: none;
+}
+
+.blog .sideBar .content {
+  border: 1px solid #dfdfdf;
+  padding: 20px 20px;
+  width: 90%;
+}
+
+.blog .sideBar .content div {
+  position: relative;
+}
+
+.blog .sideBar .content p {
+  position: absolute;
+  color: white;
+  font-size: 12px;
+  top: 3%;
+  left: 22%;
+  border: 2px solid white;
+  background: #2BBEF9FF;
+  border-radius: 50%;
+  padding: 2px 6px;
+}
+
+.blog .sideBar .content img {
+  border-radius: 50%;
+  width: 30%;
+  height: 30%;
+  margin-right: 5%;
+}
+
+.blog .sideBar .content span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.blog .sideBar .sosialMedia {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.blog .sideBar .sosialMedia button {
+  width: 90%;
+  padding: 7px 60px 7px 0;
+  margin: 2px 0;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.blog .sideBar .sosialMedia .fb {
+  background: #3B5998FF;
+}
+
+.blog .sideBar .sosialMedia .tw {
+  background: #1DA1F2FF;
+}
+
+.blog .sideBar .sosialMedia .pn {
+  background: #E60023FF;
+}
+
+.blog .sideBar .sosialMedia .in {
+  background: #0077B5FF;
+}
+
+.blog .sideBar .sosialMedia .rd {
+  background: #FF4500FF;
+}
+
+.blog .sideBar input {
+  width: 90%;
+  height: 40px;
+  padding: 0 20px;
+  border: none;
+  border-radius: 5px;
+  background: #F3F4F7FF;
+}
+
+.blog .sideBar h6 {
+  margin: 15% 0 5%;
+}
+
+.blog .sideBar .tags {
+  width: 90%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.blog .sideBar .tags button {
+  margin-left: 10px;
+  margin-top: 10px;
+  padding: 2px 10px;
+  border: none;
+  background: white;
+  border: 1px solid #e7e6e6;
 }
 
 @media (min-width: 768px) {
