--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -235,7 +235,7 @@ body {
           list-style: none;
 
           .home {
-            height: 50px;
+            // height: 50px;
             position: relative;
 
             &:hover {
@@ -924,7 +924,7 @@ footer {
 
     width: 90%;
     margin-left: 6%;
-    box-shadow: rgba(0, 0, 0, 0.1) 1px 4px 12px 5px;
+    box-shadow: rgba(0, 0, 0, 0.56) 20px 30px 120px 4px;
     padding: 3% 14%;
 
     .head {
@@ -975,6 +975,177 @@ footer {
       }
     }
 
+  }
+}
+
+// blog page
+
+
+.blog {
+  .section {
+    margin-top: 5%;
+    margin-left: 5%;
+
+
+    .article {
+      img {
+        margin-bottom: 25px;
+      }
+
+      h1 {
+        margin-top: 20px;
+        width: 100%;
+        font-size: 38px;
+      }
+
+      button {
+        margin-top: 20px;
+        padding: 5px 25px;
+        background: #233A95FF;
+      }
+    }
+
+    img {
+      border-radius: 10px;
+    }
+
+    .numbs {
+      text-align: center;
+      cursor: pointer;
+      margin: 10% 0 15%;
+
+      .active {
+        background: #2BBEF9FF;
+        color: white;
+
+      }
+
+      .numb {
+        margin: 0 7px;
+        padding: 5px 12px;
+        border-radius: 50%;
+
+        &:hover {
+          background: rgb(230, 230, 230);
+        }
+      }
+
+      i {
+        cursor: pointer;
+        padding: 10px 12px;
+        border-radius: 50%;
+
+        &:hover {
+          background: rgb(230, 230, 230);
+        }
+      }
+    }
+  }
+
+  .sideBar {
+    margin: 5% 0;
+
+    img {
+      width: 90%;
+    }
+
+    input {
+      outline: none;
+    }
+
+    .content {
+      border: 1px solid rgb(223, 223, 223);
+      padding: 20px 20px;
+      width: 90%;
+
+      div {
+        position: relative;
+      }
+
+      p {
+        position: absolute;
+        color: white;
+        font-size: 12px;
+        top: 3%;
+        left: 22%;
+        border: 2px solid white;
+        background: #2BBEF9FF;
+        border-radius: 50%;
+        padding: 2px 6px;
+      }
+
+      img {
+        border-radius: 50%;
+        width: 30%;
+        height: 30%;
+        margin-right: 5%;
+      }
+
+      span {
+        font-size: 14px;
+        font-weight: 500;
+      }
+    }
+
+    .sosialMedia {
+      flex-direction: column;
+
+      button {
+        width: 90%;
+        padding: 7px 60px 7px 0;
+        margin: 2px 0;
+        color: white;
+        border: none;
+        border-radius: 5px;
+      }
+
+      .fb {
+        background: #3B5998FF;
+      }
+
+      .tw {
+        background: #1DA1F2FF;
+      }
+
+      .pn {
+        background: #E60023FF;
+      }
+
+      .in {
+        background: #0077B5FF;
+      }
+
+      .rd {
+        background: #FF4500FF;
+      }
+    }
+
+    input {
+      width: 90%;
+      height: 40px;
+      padding: 0 20px;
+      border: none;
+      border-radius: 5px;
+      background: #F3F4F7FF;
+    }
+
+    h6 {
+      margin: 15% 0 5%;
+    }
+
+    .tags {
+      width: 90%;
+      flex-wrap: wrap;
+
+      button {
+        margin-left: 10px;
+        margin-top: 10px;
+        padding: 2px 10px;
+        border: none;
+        background: white;
+        border: 1px solid rgb(231, 230, 230);
+      }
+    }
   }
 }
 
