feat: change on deadlineSection

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -550,7 +550,61 @@ body main .deadlineSection #deadline .categories .rightSide .product {
 }
 
 body main .deadlineSection #deadline .categories .rightSide .product .content {
-  padding: 25px;
+  padding: 15px 25px;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content:hover {
+  position: absolute;
+  padding: 15px 25px;
+  width: 18.8%;
+  z-index: 5;
+  background: white;
+  border: 1px solid grey;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+          box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content:hover .minimize {
+  right: 8.5%;
+  visibility: visible;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content:hover .heart {
+  right: 8%;
+  visibility: visible;
+  -webkit-transition-duration: 0.7s;
+          transition-duration: 0.7s;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content:hover button {
+  display: block;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content i {
+  position: absolute;
+  visibility: hidden;
+  top: 12%;
+  background: white;
+  border-radius: 50%;
+  padding: 10px;
+  -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+          box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content .minimize {
+  top: 5%;
+  right: 5%;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content .heart {
+  top: 15%;
+  right: 2%;
 }
 
 body main .deadlineSection #deadline .categories .rightSide .product .content p {
@@ -570,6 +624,13 @@ body main .deadlineSection #deadline .categories .rightSide .product .content st
 
 body main .deadlineSection #deadline .categories .rightSide .product .content img {
   width: 100%;
+}
+
+body main .deadlineSection #deadline .categories .rightSide .product .content button {
+  display: none;
+  padding: 5px 60px;
+  margin: 10px 10px;
+  border-radius: 10px;
 }
 
 body main .weekendDiscountSection .side {
