--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -543,7 +543,58 @@ body {
               border: 0.5px solid rgb(214, 214, 214);
 
               .content {
-                padding: 25px;
+                padding: 15px 25px;
+                cursor: pointer;
+                position: relative;
+                transition-duration: 0.5s;
+
+                &:hover {
+                  position: absolute;
+                  padding: 15px 25px;
+                  width: 18.8%;
+                  z-index: 5;
+                  background: white;
+                  border: 1px solid grey;
+                  box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+
+                  .minimize {
+                    right: 8.5%;
+                    visibility: visible;
+                    transition-duration: 0.4s;
+
+                  }
+
+                  .heart {
+                    right: 8%;
+                    visibility: visible;
+                    transition-duration: 0.7s;
+
+                  }
+
+                  button {
+                    display: block;
+                  }
+                }
+
+                i {
+                  position: absolute;
+                  visibility: hidden;
+                  top: 12%;
+                  background: white;
+                  border-radius: 50%;
+                  padding: 10px;
+                  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+                }
+
+                .minimize {
+                  top: 5%;
+                  right: 5%;
+                }
+
+                .heart {
+                  top: 15%;
+                  right: 2%;
+                }
 
                 p {
                   width: 90%;
@@ -562,6 +613,13 @@ body {
 
                 img {
                   width: 100%;
+                }
+
+                button {
+                  display: none;
+                  padding: 5px 60px;
+                  margin: 10px 10px;
+                  border-radius: 10px;
                 }
               }
             }
@@ -1148,6 +1206,9 @@ footer {
     }
   }
 }
+
+
+
 
 // responsive
 
