--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1369,6 +1369,51 @@ footer .contactBody .contact .contactNumb {
   border-radius: 10px;
 }
 
+.productBody {
+  position: relative;
+  background-color: #F7F8FDFF;
+}
+
+.productBody .firstSection {
+  margin: 0 13%;
+  background-color: white;
+  padding: 40px;
+}
+
+.productBody .firstSection .leftPart {
+  background: blue;
+  position: relative;
+}
+
+.productBody .firstSection .leftPart .carousel-indicators .btns {
+  position: absolute;
+  bottom: 110px;
+  left: 42px;
+}
+
+.productBody .firstSection .leftPart .carousel-indicators .btns img {
+  background: transparent;
+}
+
+.productBody .firstSection .leftPart .carousel-inner {
+  width: 120%;
+}
+
+.productBody .firstSection .leftPart .carousel-inner img {
+  width: 140%;
+  margin: -30px;
+  padding: 20px 50px;
+}
+
+.productBody .firstSection .middlePart {
+  margin-left: 10%;
+  background: red;
+}
+
+.productBody .firstSection .rightPart {
+  background: green;
+}
+
 @media (min-width: 768px) {
   .cntnr {
     width: 750px;
