--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1434,6 +1434,7 @@ footer {
 .productBody {
   position: relative;
   background-color: #F7F8FDFF;
+  margin-bottom: 50px;
 
   .firstSection {
     margin: 0 13%;
@@ -1497,7 +1498,7 @@ footer {
   .tabSection {
     margin: 4% 13%;
     background-color: white;
-    padding: 40px;
+    padding: 40px 15px;
 
     .firstTabContent {
       p {}
@@ -1517,7 +1518,7 @@ footer {
     }
 
     .thirdTabContent {
-      padding: 20px;
+
 
       h6 {
         font-weight: 600;
@@ -1539,6 +1540,149 @@ footer {
         }
       }
 
+      .secondHead {
+        border-bottom: 1px solid;
+        padding-bottom: 20px;
+      }
+
+      .emailContent {
+        margin-top: 30px;
+
+        .rating {
+          .line {
+            margin: 0 15px;
+            margin-bottom: 5px;
+          }
+        }
+
+        form {
+          label {
+            width: 100%;
+            margin-bottom: 10px;
+          }
+
+          textarea {
+            background: #F3F4F7FF;
+            border: none;
+            outline: none;
+            width: 100%;
+            min-height: 200px;
+            padding: 20px;
+          }
+
+          .inp {
+            background: #F3F4F7FF;
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 5px 10px;
+            outline: none;
+            border: none;
+          }
+
+          .check {}
+        }
+      }
+    }
+  }
+
+  h5 {
+    margin: 0 -4%;
+    background: #F7F8FDFF;
+    padding: 70px 50px 30px;
+  }
+
+  .lastSection {
+    margin: 4% 11%;
+
+    .product {
+      border: 0.5px solid rgb(214, 214, 214);
+      background-color: white;
+
+      .content {
+        padding: 15px 25px;
+        cursor: pointer;
+        position: relative;
+        transition-duration: 0.5s;
+
+        &:hover {
+          position: absolute;
+          padding: 15px 25px;
+          width: 18%;
+          z-index: 5;
+          background: white;
+          border: 1px solid grey;
+          box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+
+          .minimize {
+            right: 8.5%;
+            visibility: visible;
+            transition-duration: 0.4s;
+
+          }
+
+          .heart {
+            right: 8%;
+            visibility: visible;
+            transition-duration: 0.7s;
+
+          }
+
+          button {
+            display: block;
+          }
+        }
+
+        .description {
+          font-size: 12px;
+        }
+
+        i {
+          position: absolute;
+          visibility: hidden;
+          top: 12%;
+          background: white;
+          border-radius: 50%;
+          padding: 10px;
+          box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
+        }
+
+        .minimize {
+          top: 5%;
+          right: 5%;
+        }
+
+        .heart {
+          top: 20%;
+          right: 2%;
+        }
+
+        p {
+          width: 90%;
+          margin: 0 !important;
+
+          img {
+            width: 60%;
+          }
+        }
+
+        strong {
+          font-size: 10px;
+          font-weight: 700;
+          color: #2FC573FF;
+        }
+
+        img {
+          width: 100%;
+        }
+
+        button {
+          display: none;
+          padding: 5px 70px;
+          font-size: 12px;
+          margin: 15px 0px;
+          border-radius: 20px;
+        }
+      }
     }
   }
 }
